<project>
   <modelVersion>4.0.0</modelVersion>

   <groupId>com.github.SkySpiral7</groupId>
   <artifactId>Java.StaticSerialization</artifactId>
   <version>0.0.0-SNAPSHOT</version>

   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
      <maven.compiler.source>17</maven.compiler.source>
      <maven.compiler.target>17</maven.compiler.target>
      <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss.SSSXXX</maven.build.timestamp.format>
      <project.timestamp>${maven.build.timestamp}</project.timestamp>

      <hamcrest-all.version>1.3</hamcrest-all.version>
      <junit-jupiter-engine.version>5.10.0</junit-jupiter-engine.version>
      <jackson-databind.version>2.15.2</jackson-databind.version>
      <log4j2.version>2.20.0</log4j2.version>

      <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
      <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
      <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
   </properties>

   <dependencies>
      <!--prod scope-->
      <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
         <version>${log4j2.version}</version>
      </dependency>

      <!--test scope-->
      <dependency>
         <groupId>com.github.SkySpiral7</groupId>
         <artifactId>Java</artifactId>
         <version>0.0.0-SNAPSHOT</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
         <version>${log4j2.version}</version>
         <scope>test</scope>
      </dependency>
      <!--jackson is required for log4j2.json be to auto parsed-->
      <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>${jackson-databind.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
         <version>${hamcrest-all.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <version>${junit-jupiter-engine.version}</version>
         <scope>test</scope>
      </dependency>
   </dependencies>

   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>${maven-compiler-plugin.version}</version>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>${maven-source-plugin.version}</version>
            <executions>
               <execution>
                  <id>attach-sources</id>
                  <phase>verify</phase>
                  <goals>
                     <goal>jar-no-fork</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>${maven-surefire-plugin.version}</version>
            <configuration>
               <includes>
                  <include>**/*_UT.java</include>
                  <include>**/*_IT.java</include>
               </includes>
               <excludes>
                  <exclude>**/DoNotDo_IT.java</exclude>
               </excludes>
            </configuration>
         </plugin>
      </plugins>
   </build>
</project>
